# mcp_jenkins

./: .env_example  .gitignore  README.md  pyproject.toml  server_stdio.py
libraries/: jenkins_api.py  jenkins_server.py
prompts/: register_prompts.py  template_prompts.py
tools/: register_tools.py  tool_common.py  tool_jenkins_build.py  tool_jenkins_job.py  tool_jenkins_view.py
